깃허브 연습중( 김지혜 )

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
   </head>
   <body>
     <!-- 상단 -->
+
     <!-- 비주얼 -->
     <!-- 베스트 -->
+     <p>김지혜</p>
     <!-- 신상 -->
     <!-- 에디터픽 -->
     <!-- 리뷰 -->
