--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/variables.css" />
     <!-- 수현 -->
 
     <!-- 지수 -->
@@ -23,16 +23,19 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- 상단 -->
-
-     <p>이수현</p>
-
-    <!-- 비주얼 -->
-     <p>김지수</p>
-    <!-- 베스트 -->
-     <p>김지혜</p>
-    <!-- 신상 -->
-    <!-- 에디터픽 -->
-    <!-- 리뷰 -->
+    <!-- 전체레이아웃 -->
+    <div class="wrap">
+      <!-- a_header -->
+      <!-- b_visual slide -->
+      <!-- c_best -->
+      <!-- d_new -->
+      <!-- e_pick -->
+      <!-- f_review -->
+      <!-- g_event -->
+      <!-- h_service -->
+      <!-- i-footer -->
+      <!-- UpBtn -->
+      <!-- modal -->
+    </div>
   </body>
 </html>
