html 레이아웃 변경중

--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- seo적용 -->
-    <!-- favican -->
+    <!-- 웹페이지의 설명을 정의 -->
+    <meta name="description" content="팀 프로젝트 numberone 웹사이트입니다." />
+    <!-- 웹페이지와 관련된 키워드를 정의 -->
+    <meta name="keywords" content="numberone" />
+    <!-- 웹페이지의 저자를 정의  -->
+    <meta name="author" content="1team" />
+    <!-- 소셜 미디어에서 페이지가 공유될때 사용되는 제목 -->
+    <meta property="og:title" content="numberone" />
+    <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 사이트 이름 -->
+    <meta property="og:site_name" content="numberone" />
+    <!-- 소셜 미디어에서 페이지가 웹사이트임을 명시 -->
+    <meta property="og:type" content="website" />
+    <!-- Open Graph 프로토콜에서 사용되는 메타 태그의 속성 중 하나로, 
+      페이지의 간략한 설명을 제공하는 데 사용 -->
+    <!-- 소셜 미디어에서 공유될 때 사용되는 URL -->
+    <meta property="og:url" content="https://leesuhyeon1123.github.io/kittybunnypony_project/" />
+    <!-- 소셜 미디어에서 페이지가 공유될 때 표시되는 이미지 -->
+    <meta property="og:image" content="https://leesuhyeon1123.github.io/kittybunnypony_project/images/logo.png" />
+    <!-- 소셜 미디어에서 페이지가 공유될 때 사용되는 설명 -->
+    <meta property="og:description" content="팀 프로젝트 numberone 웹사이트입니다." />
+
+    <!-- favicon -->
+    <link rel="icon" href="images/favicon_logo2.png" type="favicon_logo2" />
 
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/variables.css" />
+    <link rel="stylesheet" href="css/main.css" />
+
     <!-- 수현 -->
 
     <!-- 지수 -->
@@ -20,13 +45,30 @@
 
     <!-- 지수 -->
     <!-- 지혜 -->
-    <title>Document</title>
+    <title>LUSH-numberone</title>
   </head>
   <body>
     <!-- 전체레이아웃 -->
     <div class="wrap">
       <!-- a_header -->
+       <div class="a_header">
+        <div class="wrap-inner">
+
+        </div>
+       </div>
       <!-- b_visual slide -->
+       <div class="b_visual">
+        <div class="swiper visual-sw">
+          <div class="swiper">
+            <div class="swiper-slide">
+              <img src="" alt="">
+              <div class="box-txt">
+                <div class="wrap-inner"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
       <!-- c_best -->
       <!-- d_new -->
       <!-- e_pick -->
