--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- 전체레이아웃 -->
     <div class="wrap">
       <!-- a_header -->
+       <div class="header"></div>
       <!-- b_visual slide -->
       <!-- c_best -->
       <!-- d_new -->
