--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/main.css" />
 
+    <!-- swiper css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/style.js"></script>
+
     <!-- 수현 -->
 
     <!-- 지수 -->
@@ -52,31 +59,30 @@
     <div class="wrap">
       <!-- a_header -->
 
-       <div class="a_header">
-        <div class="wrap-inner">
-
-        </div>
-       </div>
+      <div class="a_header">
+        <div class="wrap-inner"></div>
+      </div>
 
       <!-- b_visual slide -->
-       <div class="b_visual">
+      <div class="b_visual">
         <div class="swiper visual-sw">
           <div class="swiper">
             <div class="swiper-slide">
-              <img src="" alt="">
+              <img src="" alt="" />
               <div class="box-txt">
                 <div class="wrap-inner"></div>
               </div>
             </div>
           </div>
         </div>
-       </div>
+      </div>
       <!-- c_best -->
-       
+
       <!-- d_new -->
       <!-- e_pick -->
       <!-- f_review -->
       <!-- g_event -->
+       
       <!-- h_service -->
       <!-- i-footer -->
       <!-- UpBtn -->
