--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <meta property="og:description" content="팀 프로젝트 numberone 웹사이트입니다." />
 
     <!-- favicon -->
-    <link rel="icon" href="images/favicon_logo2.png" type="favicon_logo2" />
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/site.webmanifest" />
 
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
@@ -36,7 +40,8 @@
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
+    <!-- 제이쿼리 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/style.js"></script>
@@ -46,7 +51,6 @@
     <!-- 지수 -->
     <!-- 지혜 -->
     <!-- js -->
-    <!-- 공통 js -->
 
     <!-- 수현 -->
 
@@ -82,7 +86,7 @@
       <!-- e_pick -->
       <!-- f_review -->
       <!-- g_event -->
-       
+
       <!-- h_service -->
       <!-- i-footer -->
       <!-- UpBtn -->
