수현 영역 html 작성

--- a/index.html
+++ b/index.html
@@ -85,9 +85,232 @@
       <!-- d_new -->
       <!-- e_pick -->
       <!-- f_review -->
+      <section class="f_review">
+        <div class="wrap-inner">
+          <h2>LUSH 팬들의 이야기</h2>
+          <div class="review-card">
+            <a href="https://www.lush.co.kr/m/products/view/85?giftYn=Y&dc=">
+              <img src="images/suhyeon/review/1-copy-0.jpg" alt="허벌리즘" />
+            </a>
+            <div class="product-info">
+              <h2 class="product-title">
+                <a href="https://www.lush.co.kr/m/products/view/85?giftYn=Y&dc=">
+                  [러쉬][국내제조] 허벌리즘 100g 외 4종...
+                </a>
+              </h2>
+              <div class="star">
+                <svg width="131" height="25" viewBox="0 0 131 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M11.8539 1.09019C12.0739 0.644243 12.7098 0.644244 12.9299 1.09019L15.8942 7.0964C15.9816 7.27349 16.1505 7.39623 16.3459 7.42463L22.9742 8.38777C23.4663 8.45928 23.6628 9.06406 23.3067 9.41118L18.5105 14.0864C18.3691 14.2242 18.3045 14.4228 18.3379 14.6174L19.4701 21.2189C19.5542 21.7091 19.0398 22.0828 18.5996 21.8514L12.6711 18.7346C12.4963 18.6427 12.2875 18.6427 12.1127 18.7346L6.1842 21.8514C5.74403 22.0828 5.22957 21.7091 5.31363 21.2189L6.44587 14.6174C6.47926 14.4228 6.41473 14.2242 6.27332 14.0864L1.47707 9.41118C1.12096 9.06406 1.31747 8.45928 1.8096 8.38777L8.43785 7.42463C8.63327 7.39623 8.80221 7.27349 8.88961 7.0964L11.8539 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M38.4076 1.09019C38.6277 0.644243 39.2636 0.644244 39.4836 1.09019L42.4479 7.0964C42.5353 7.27349 42.7042 7.39623 42.8997 7.42463L49.5279 8.38777C50.02 8.45928 50.2165 9.06406 49.8604 9.41118L45.0642 14.0864C44.9228 14.2242 44.8582 14.4228 44.8916 14.6174L46.0239 21.2189C46.1079 21.7091 45.5935 22.0828 45.1533 21.8514L39.2248 18.7346C39.05 18.6427 38.8412 18.6427 38.6664 18.7346L32.7379 21.8514C32.2977 22.0828 31.7833 21.7091 31.8673 21.2189L32.9996 14.6174C33.033 14.4228 32.9684 14.2242 32.827 14.0864L28.0308 9.41118C27.6747 9.06406 27.8712 8.45928 28.3633 8.38777L34.9916 7.42463C35.187 7.39623 35.3559 7.27349 35.4433 7.0964L38.4076 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M64.9622 1.09019C65.1823 0.644243 65.8182 0.644244 66.0383 1.09019L69.0026 7.0964C69.09 7.27349 69.2589 7.39623 69.4543 7.42463L76.0826 8.38777C76.5747 8.45928 76.7712 9.06406 76.4151 9.41118L71.6189 14.0864C71.4775 14.2242 71.4129 14.4228 71.4463 14.6174L72.5785 21.2189C72.6626 21.7091 72.1482 22.0828 71.708 21.8514L65.7795 18.7346C65.6047 18.6427 65.3959 18.6427 65.2211 18.7346L59.2926 21.8514C58.8524 22.0828 58.338 21.7091 58.422 21.2189L59.5543 14.6174C59.5877 14.4228 59.5231 14.2242 59.3817 14.0864L54.5855 9.41118C54.2294 9.06406 54.4259 8.45928 54.918 8.38777L61.5462 7.42463C61.7417 7.39623 61.9106 7.27349 61.998 7.0964L64.9622 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M91.516 1.09019C91.736 0.644243 92.372 0.644244 92.592 1.09019L95.5563 7.0964C95.6437 7.27349 95.8126 7.39623 96.008 7.42463L102.636 8.38777C103.128 8.45928 103.325 9.06406 102.969 9.41118L98.1726 14.0864C98.0312 14.2242 97.9666 14.4228 98 14.6174L99.1323 21.2189C99.2163 21.7091 98.7019 22.0828 98.2617 21.8514L92.3332 18.7346C92.1584 18.6427 91.9496 18.6427 91.7748 18.7346L85.8463 21.8514C85.4061 22.0828 84.8917 21.7091 84.9757 21.2189L86.108 14.6174C86.1414 14.4228 86.0768 14.2242 85.9354 14.0864L81.1392 9.41118C80.7831 9.06406 80.9796 8.45928 81.4717 8.38777L88.1 7.42463C88.2954 7.39623 88.4643 7.27349 88.5517 7.0964L91.516 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M118.07 1.09019C118.29 0.644243 118.926 0.644244 119.146 1.09019L122.11 7.0964C122.197 7.27349 122.366 7.39623 122.562 7.42463L129.19 8.38777C129.682 8.45928 129.879 9.06406 129.523 9.41118L124.726 14.0864C124.585 14.2242 124.52 14.4228 124.554 14.6174L125.686 21.2189C125.77 21.7091 125.256 22.0828 124.815 21.8514L118.887 18.7346C118.712 18.6427 118.503 18.6427 118.329 18.7346L112.4 21.8514C111.96 22.0828 111.445 21.7091 111.529 21.2189L112.662 14.6174C112.695 14.4228 112.631 14.2242 112.489 14.0864L107.693 9.41118C107.337 9.06406 107.533 8.45928 108.025 8.38777L114.654 7.42463C114.849 7.39623 115.018 7.27349 115.105 7.0964L118.07 1.09019Z"
+                    fill="#222222"
+                  />
+                </svg>
+                <span>(1,856)</span>
+              </div>
+              <div class="review">
+                <p review-title>
+                  러쉬 클렌저 딴것들도 써봤는데 저한텐 허벌리즘이 제일 맞는것 같아요.<br />
+                  정확히 무슨 효관지는 모르겠는데 피부가 개운해지는 느낌이예요ㅋㅋ
+                </p>
+                <span class="reviewer">oncl*****</span> <span class="date">25.01.22</span>
+              </div>
+              <div class="review-sub">
+                <a href="#"><img src="images/suhyeon/review/1-copy-1.jpg" alt="허벌리즘-고객리뷰사진" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="review-card">
+            <a href="#">
+              <img src="images/suhyeon/review/2.jpg" alt="해피스킨" />
+            </a>
+            <div class="product-info">
+              <h2 class="product-title">
+                <a href="#"> [러쉬]해피 스킨 100g - 페이셜 엑스... </a>
+              </h2>
+              <div class="star">
+                <svg width="131" height="25" viewBox="0 0 131 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M11.8539 1.09019C12.0739 0.644243 12.7098 0.644244 12.9299 1.09019L15.8942 7.0964C15.9816 7.27349 16.1505 7.39623 16.3459 7.42463L22.9742 8.38777C23.4663 8.45928 23.6628 9.06406 23.3067 9.41118L18.5105 14.0864C18.3691 14.2242 18.3045 14.4228 18.3379 14.6174L19.4701 21.2189C19.5542 21.7091 19.0398 22.0828 18.5996 21.8514L12.6711 18.7346C12.4963 18.6427 12.2875 18.6427 12.1127 18.7346L6.1842 21.8514C5.74403 22.0828 5.22957 21.7091 5.31363 21.2189L6.44587 14.6174C6.47926 14.4228 6.41473 14.2242 6.27332 14.0864L1.47707 9.41118C1.12096 9.06406 1.31747 8.45928 1.8096 8.38777L8.43785 7.42463C8.63327 7.39623 8.80221 7.27349 8.88961 7.0964L11.8539 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M38.4076 1.09019C38.6277 0.644243 39.2636 0.644244 39.4836 1.09019L42.4479 7.0964C42.5353 7.27349 42.7042 7.39623 42.8997 7.42463L49.5279 8.38777C50.02 8.45928 50.2165 9.06406 49.8604 9.41118L45.0642 14.0864C44.9228 14.2242 44.8582 14.4228 44.8916 14.6174L46.0239 21.2189C46.1079 21.7091 45.5935 22.0828 45.1533 21.8514L39.2248 18.7346C39.05 18.6427 38.8412 18.6427 38.6664 18.7346L32.7379 21.8514C32.2977 22.0828 31.7833 21.7091 31.8673 21.2189L32.9996 14.6174C33.033 14.4228 32.9684 14.2242 32.827 14.0864L28.0308 9.41118C27.6747 9.06406 27.8712 8.45928 28.3633 8.38777L34.9916 7.42463C35.187 7.39623 35.3559 7.27349 35.4433 7.0964L38.4076 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M64.9622 1.09019C65.1823 0.644243 65.8182 0.644244 66.0383 1.09019L69.0026 7.0964C69.09 7.27349 69.2589 7.39623 69.4543 7.42463L76.0826 8.38777C76.5747 8.45928 76.7712 9.06406 76.4151 9.41118L71.6189 14.0864C71.4775 14.2242 71.4129 14.4228 71.4463 14.6174L72.5785 21.2189C72.6626 21.7091 72.1482 22.0828 71.708 21.8514L65.7795 18.7346C65.6047 18.6427 65.3959 18.6427 65.2211 18.7346L59.2926 21.8514C58.8524 22.0828 58.338 21.7091 58.422 21.2189L59.5543 14.6174C59.5877 14.4228 59.5231 14.2242 59.3817 14.0864L54.5855 9.41118C54.2294 9.06406 54.4259 8.45928 54.918 8.38777L61.5462 7.42463C61.7417 7.39623 61.9106 7.27349 61.998 7.0964L64.9622 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M91.516 1.09019C91.736 0.644243 92.372 0.644244 92.592 1.09019L95.5563 7.0964C95.6437 7.27349 95.8126 7.39623 96.008 7.42463L102.636 8.38777C103.128 8.45928 103.325 9.06406 102.969 9.41118L98.1726 14.0864C98.0312 14.2242 97.9666 14.4228 98 14.6174L99.1323 21.2189C99.2163 21.7091 98.7019 22.0828 98.2617 21.8514L92.3332 18.7346C92.1584 18.6427 91.9496 18.6427 91.7748 18.7346L85.8463 21.8514C85.4061 22.0828 84.8917 21.7091 84.9757 21.2189L86.108 14.6174C86.1414 14.4228 86.0768 14.2242 85.9354 14.0864L81.1392 9.41118C80.7831 9.06406 80.9796 8.45928 81.4717 8.38777L88.1 7.42463C88.2954 7.39623 88.4643 7.27349 88.5517 7.0964L91.516 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M118.07 1.09019C118.29 0.644243 118.926 0.644244 119.146 1.09019L122.11 7.0964C122.197 7.27349 122.366 7.39623 122.562 7.42463L129.19 8.38777C129.682 8.45928 129.879 9.06406 129.523 9.41118L124.726 14.0864C124.585 14.2242 124.52 14.4228 124.554 14.6174L125.686 21.2189C125.77 21.7091 125.256 22.0828 124.815 21.8514L118.887 18.7346C118.712 18.6427 118.503 18.6427 118.329 18.7346L112.4 21.8514C111.96 22.0828 111.445 21.7091 111.529 21.2189L112.662 14.6174C112.695 14.4228 112.631 14.2242 112.489 14.0864L107.693 9.41118C107.337 9.06406 107.533 8.45928 108.025 8.38777L114.654 7.42463C114.849 7.39623 115.018 7.27349 115.105 7.0964L118.07 1.09019Z"
+                    fill="#222222"
+                  />
+                </svg>
+                <span>(2,512)</span>
+              </div>
+              <div class="review">
+                <p review-title>자극 없고 좋아요 ! 피부 엄청 얇으시면 폼에 섞어서 쓰는거두 좋을듯요!!</p>
+                <span class="reviewer">ll96*****</span> <span class="date">25.01.16</span>
+              </div>
+              <div class="review-sub">
+                <a href="#"><img src="images/suhyeon/review/2.jpeg" alt="해피스킨-고객리뷰사진" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="review-card">
+            <a href="#">
+              <img src="images/suhyeon/review/3.jpg" alt="로즈잼" />
+            </a>
+            <div class="product-info">
+              <h2 class="product-title">
+                <a href="#"> [러쉬] 로즈 잼 250g - 샤워 젤 / 바디... </a>
+              </h2>
+              <div class="star">
+                <svg width="131" height="25" viewBox="0 0 131 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M11.8539 1.09019C12.0739 0.644243 12.7098 0.644244 12.9299 1.09019L15.8942 7.0964C15.9816 7.27349 16.1505 7.39623 16.3459 7.42463L22.9742 8.38777C23.4663 8.45928 23.6628 9.06406 23.3067 9.41118L18.5105 14.0864C18.3691 14.2242 18.3045 14.4228 18.3379 14.6174L19.4701 21.2189C19.5542 21.7091 19.0398 22.0828 18.5996 21.8514L12.6711 18.7346C12.4963 18.6427 12.2875 18.6427 12.1127 18.7346L6.1842 21.8514C5.74403 22.0828 5.22957 21.7091 5.31363 21.2189L6.44587 14.6174C6.47926 14.4228 6.41473 14.2242 6.27332 14.0864L1.47707 9.41118C1.12096 9.06406 1.31747 8.45928 1.8096 8.38777L8.43785 7.42463C8.63327 7.39623 8.80221 7.27349 8.88961 7.0964L11.8539 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M38.4076 1.09019C38.6277 0.644243 39.2636 0.644244 39.4836 1.09019L42.4479 7.0964C42.5353 7.27349 42.7042 7.39623 42.8997 7.42463L49.5279 8.38777C50.02 8.45928 50.2165 9.06406 49.8604 9.41118L45.0642 14.0864C44.9228 14.2242 44.8582 14.4228 44.8916 14.6174L46.0239 21.2189C46.1079 21.7091 45.5935 22.0828 45.1533 21.8514L39.2248 18.7346C39.05 18.6427 38.8412 18.6427 38.6664 18.7346L32.7379 21.8514C32.2977 22.0828 31.7833 21.7091 31.8673 21.2189L32.9996 14.6174C33.033 14.4228 32.9684 14.2242 32.827 14.0864L28.0308 9.41118C27.6747 9.06406 27.8712 8.45928 28.3633 8.38777L34.9916 7.42463C35.187 7.39623 35.3559 7.27349 35.4433 7.0964L38.4076 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M64.9622 1.09019C65.1823 0.644243 65.8182 0.644244 66.0383 1.09019L69.0026 7.0964C69.09 7.27349 69.2589 7.39623 69.4543 7.42463L76.0826 8.38777C76.5747 8.45928 76.7712 9.06406 76.4151 9.41118L71.6189 14.0864C71.4775 14.2242 71.4129 14.4228 71.4463 14.6174L72.5785 21.2189C72.6626 21.7091 72.1482 22.0828 71.708 21.8514L65.7795 18.7346C65.6047 18.6427 65.3959 18.6427 65.2211 18.7346L59.2926 21.8514C58.8524 22.0828 58.338 21.7091 58.422 21.2189L59.5543 14.6174C59.5877 14.4228 59.5231 14.2242 59.3817 14.0864L54.5855 9.41118C54.2294 9.06406 54.4259 8.45928 54.918 8.38777L61.5462 7.42463C61.7417 7.39623 61.9106 7.27349 61.998 7.0964L64.9622 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M91.516 1.09019C91.736 0.644243 92.372 0.644244 92.592 1.09019L95.5563 7.0964C95.6437 7.27349 95.8126 7.39623 96.008 7.42463L102.636 8.38777C103.128 8.45928 103.325 9.06406 102.969 9.41118L98.1726 14.0864C98.0312 14.2242 97.9666 14.4228 98 14.6174L99.1323 21.2189C99.2163 21.7091 98.7019 22.0828 98.2617 21.8514L92.3332 18.7346C92.1584 18.6427 91.9496 18.6427 91.7748 18.7346L85.8463 21.8514C85.4061 22.0828 84.8917 21.7091 84.9757 21.2189L86.108 14.6174C86.1414 14.4228 86.0768 14.2242 85.9354 14.0864L81.1392 9.41118C80.7831 9.06406 80.9796 8.45928 81.4717 8.38777L88.1 7.42463C88.2954 7.39623 88.4643 7.27349 88.5517 7.0964L91.516 1.09019Z"
+                    fill="#222222"
+                  />
+                  <path
+                    d="M118.07 1.09019C118.29 0.644243 118.926 0.644244 119.146 1.09019L122.11 7.0964C122.197 7.27349 122.366 7.39623 122.562 7.42463L129.19 8.38777C129.682 8.45928 129.879 9.06406 129.523 9.41118L124.726 14.0864C124.585 14.2242 124.52 14.4228 124.554 14.6174L125.686 21.2189C125.77 21.7091 125.256 22.0828 124.815 21.8514L118.887 18.7346C118.712 18.6427 118.503 18.6427 118.329 18.7346L112.4 21.8514C111.96 22.0828 111.445 21.7091 111.529 21.2189L112.662 14.6174C112.695 14.4228 112.631 14.2242 112.489 14.0864L107.693 9.41118C107.337 9.06406 107.533 8.45928 108.025 8.38777L114.654 7.42463C114.849 7.39623 115.018 7.27349 115.105 7.0964L118.07 1.09019Z"
+                    fill="#222222"
+                  />
+                </svg>
+                <span>(568)</span>
+              </div>
+              <div class="review">
+                <p review-title>
+                  건조한 피부에 좋다고 해서 로즈잼으로 구매했는데 향이 너무 좋아요 !!<br />
+                  사용감도 좋고 굿 키마랑 비슷한 것 같은데 계속 사용해 보려고요.
+                </p>
+                <span class="reviewer">sson*****</span> <span class="date">25.01.15</span>
+              </div>
+              <div class="review-sub">
+                <a href="#"><img src="images/suhyeon/review/3-copy-0.jpg" alt="로즈잼-고객리뷰사진" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- g_event -->
+      <section class="g_event">
+        <div class="wrap-inner">
+          <h2>지금 놓치면 안될 이벤트</h2>
+
+          <div class="event-card">
+            <div class="swiper eventSwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="#"><img src="images/suhyeon/event/1.png" alt="이벤트이미지1" /></a>
+                  <p class="event-title">블랙 팟 속 선물이 팟! 팟!</p>
+                  <span class="event-txt">100% 선물 당첨! 지금 바로 참여해 보세요!</span>
+                </div>
+                <div class="swiper-slide">
+                  < <a href="#"><img src="images/suhyeon/event/2.png" alt="이벤트이미지2" /></a>
+                  <p class="event-title">나의 달콤한 그대에게</p>
+                  <span class="event-txt">달콤함이 가득한 발렌타인 이벤트!</span>
+                </div>
+                <div class="swiper-slide">
+                  < <a href="#"><img src="images/suhyeon/event/3.png" alt="이벤트이미지3" /></a>
+                  <p class="event-title">2월 리뷰 톡톡</p>
+                  <span class="event-txt">리뷰를 댓글로 인증해 보세요!</span>
+                </div>
+                <div class="swiper-slide">
+                  < <a href="#"><img src="images/suhyeon/event/4.png" alt="이벤트이미지4" /></a>
+                  <p class="event-title">다운로드 러쉬 2월</p>
+                  <span class="event-txt">완벽한 한쌍</span>
+                </div>
+                <div class="swiper-slide">
+                  < <a href="#"><img src="images/suhyeon/event/5.png" alt="이벤트이미지5" /></a>
+                  <p class="event-title">Lush Party The ture Love show</p>
+                  <span class="event-txt">러쉬파티에서 진정한 사랑의 의미를 찾아보세요!</span>
+                </div>
+                <div class="swiper-slide">
+                  < <a href="#"><img src="images/suhyeon/event/6.png" alt="이벤트이미지6" /></a>
+                  <p class="event-title">두물머리 전시 이벤트</p>
+                  <span class="event-txt">두물머리 러쉬 빌리지에서 만나는 특별한 콘텐츠</span>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- h_service -->
+      <section class="h_service">
+        <div class="wrap-inner">
+          <h2>러쉬에서 만나는 다채로운 서비스</h2>
+
+          <div class="service-card">
+            <div class="swiper serviceSwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="#"><img src="images/suhyeon/service/1.jpg" alt="visual1" /></a>
+                  <p class="service-title">디지털 덕찌</p>
+                  <span class="service-txt"
+                    >러쉬 만의 멤버십 뱃지 프로그램 덕찌력을 쌓아보세요!<br />
+                    특별한 선물이 준비되어 있어요.</span
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <a href="#"><img src="images/suhyeon/service/2.png" alt="visual2" /></a>
+                  <p class="service-title">회원 선물</p>
+                  <span class="service-txt"
+                    >공식 앱 회원에게만 제공하는 365일 신선한<br />
+                    스마트 샘플과 깜짝 선물 교환권을<br />
+                    발급해드려요!</span
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <a href="#"><img src="images/suhyeon/service/3.png" alt="visual3" /></a>
+                  <p class="service-title">선물하기</p>
+                  <span class="service-txt"
+                    >주소와 연락처를 몰라도<br />
+                    향기로운 선물을 메시지 카드와 함께<br />
+                    쇼핑백에 담아 선물해 보세요!</span
+                  >
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- i-footer -->
       <!-- UpBtn -->
       <!-- modal -->
