--- a/index.html
+++ b/index.html
@@ -44,18 +44,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/style.js"></script>
-
-    <!-- 수현 -->
-
-    <!-- 지수 -->
-    <!-- 지혜 -->
-    <!-- js -->
-
-    <!-- 수현 -->
-
-    <!-- 지수 -->
-    <!-- 지혜 -->
+    <script src="js/a_header.js"></script>
+    <script src="js/b_visual.js"></script>
+    <script src="js/c_best.js"></script>
+    <script src="js/d_new.js"></script>
+    <script src="js/e_new.js"></script>
+    <script src="js/f_review.js"></script>
+    <script src="js/g_event.js"></script>
+    <script src="js/h_service.js"></script>
+    <script src="js/i-footer.js"></script>
     <title>LUSH-numberone</title>
   </head>
   <body>
@@ -63,8 +60,143 @@
     <div class="wrap">
       <!-- a_header -->
 
-      <div class="a_header">
-        <div class="wrap-inner"></div>
+      <header class="a_header">
+        <div class="wrap-inner">
+          <!-- 햄버거바 메뉴버튼 -->
+            <a href="#" class="mb-xi" id="hamburger-menu">
+              <img src="images/jihye/a_header/icon/icon-menu.png" alt="햄버거바 아이콘">
+            </a>
+          <!--로고  -->
+        <a href="#" class="logo">
+          <img src="images/jihye/a_header/logo.png" alt="로고" />
+        </a>
+        <!-- 메뉴 -->
+        <nav>
+          <ul class="gnb">
+            <li>
+              <a href="#">카테고리</a>
+              <ul class="depth2">
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트">베스트</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보">콜라보</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드">리미티드</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품">신제품</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어">헤어</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스">페이스</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업">메이크업</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트">기프트</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰">배쓰</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워">샤워</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디">보디</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_fragrance.png" alt="프래그런스">프래그런스</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리">악세서리</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그">스웨그</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파">스파</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험">체험</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">이벤트</a>
+              <ul class="depth2">
+                <li><a href="#">러쉬 이벤트</a></li>
+                <li><a href="#">선정자 발표</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">커뮤니티</a>
+              <ul class="depth2">
+                <li><a href="#">젤러쉬</a></li>
+                <li><a href="#">에디터픽</a></li>
+                <li><a href="#">러쉬 타임즈</a></li>
+                <li><a href="#">리토의 일기장</a></li>
+                <li><a href="#">다운로드 러쉬</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">러쉬소식</a>
+              <ul class="depth2">
+                <li><a href="#">러쉬소개</a></li>
+                <li><a href="#">러쉬 이야기</a></li>
+                <li><a href="#">채러티팟</a></li>
+                <li><a href="#">서명 캠페인</a></li>
+                <li><a href="#">매장안내</a></li>
+                <li><a href="#">채용공고</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <!-- 사용자 아이콘 -->
+        <ul class="user">
+          <li>
+            <a href="#"><img src="images/jihye/a_header/icon/icon-search.png" alt="search"></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/jihye/a_header/icon/icon-user.png" alt="user"></a>
+          </li>
+          <li>
+            <a href="#"><img src="images/jihye/a_header/icon/icon-cart.png" alt="cart"></a>
+          </li>
+        </ul>
+        <div class="a_header-bg"></div>
+        <!-- 모바일용 메뉴 -->
+        <div class="mobile-nav" id="mobile-nav">
+          <ul class="gnb">
+            <li>
+              <a href="#">카테고리</a>
+              <ul class="depth2">
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_vest.png" alt="베스트">베스트</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_collabo.png" alt="콜라보">콜라보</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_limited.png" alt="리미티드">리미티드</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_newproduts.png" alt="신제품">신제품</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_hair.png" alt="헤어">헤어</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_face.png" alt="페이스">페이스</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_makeup.png" alt="메이크업">메이크업</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_gift.png" alt="기프트">기프트</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_bath.png" alt="배쓰">배쓰</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_shower.png" alt="샤워">샤워</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_body.png" alt="보디">보디</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_fragrance.png" alt="프래그런스">프래그런스</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_accessory.png" alt="악세서리">악세서리</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_swag.png" alt="스웨그">스웨그</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_spa.png" alt="스파">스파</a></li>
+                <li><a href="#"><img src="images/jihye/a_header/gnb/gnb_experience.png" alt="체험">체험</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">이벤트</a>
+              <ul class="depth2">
+                <li><a href="#">러쉬 이벤트</a></li>
+                <li><a href="#">선정자 발표</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">커뮤니티</a>
+              <ul class="depth2">
+                <li><a href="#">젤러쉬</a></li>
+                <li><a href="#">에디터픽</a></li>
+                <li><a href="#">러쉬 타임즈</a></li>
+                <li><a href="#">리토의 일기장</a></li>
+                <li><a href="#">다운로드 러쉬</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">러쉬소식</a>
+              <ul class="depth2">
+                <li><a href="#">러쉬소개</a></li>
+                <li><a href="#">러쉬 이야기</a></li>
+                <li><a href="#">채러티팟</a></li>
+                <li><a href="#">서명 캠페인</a></li>
+                <li><a href="#">매장안내</a></li>
+                <li><a href="#">채용공고</a></li>
+              </ul>
+            </li>
+          </ul>
+          <!-- 닫기버튼 -->
+          <div class="close-menu" id="close-menu">
+            <img src="images/jihye/b_visual slide/icon-slide2.png" alt="">
+          </div>
+        </div>
+        </div>
+      </header>
       </div>
 
       <!-- b_visual slide -->
@@ -681,6 +813,7 @@
       </section>
 
       <!-- i-footer -->
+       
       <!-- UpBtn -->
       <!-- modal -->
     </div>
